--- a/online-zoo/pages/map/style.css
+++ b/online-zoo/pages/map/style.css
@@ -13,6 +13,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
 }
 
 .test1 {
